Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19334

bool is_eits_usable(Field*): Assertion `field->table->stats_is_read' failed.

    XMLWordPrintable

Details

    Description

      The test case is

      create temporary table t1(a int);
      insert into t1 values (1),(2),(3);
       
      set use_stat_tables=preferably;
      set optimizer_use_condition_selectivity=4;
       
      select * from t1 where a >= 2;
      drop table t1;
      

      For temporary table we do not allocate statistics and should not read it

      Attachments

        Issue Links

          Activity

            People

              varun Varun Gupta (Inactive)
              varun Varun Gupta (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: