MDEV-19334: bool is_eits_usable(Field*): Assertion `field->table->stats_is_read' failed.

Fixed the assert by making sure that not to use EITS if the column statistics was not allocated.